--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             #right-nav {
                 position: absolute;
                 display: flex;
-                top: 10px;
+                top: 8px;
                 right: 3px;
                 justify-content: space-evenly;
                 align-items: center;
@@ -63,8 +63,35 @@
             }
             #search-buttons {
                 position: relative;
-                text-align: center;
-                top: 150px;
+                margin: auto;
+                top: 107px;
+                display: flex;
+                align-items: center;
+                justify-content: space-evenly;
+                width: 305px;
+            }
+            .search-button {
+                color: rgb(37, 37, 42);
+                background-color: rgb(248, 249, 250);
+                font-family: arial;
+                font-size: 14px;
+                height: 36px;
+                border: none;
+                border-radius: 4px;
+            }
+            .search-button:hover {
+                border-style: solid;
+                border-color:rgb(223, 225, 229);
+                border-width: 1px;
+                border-radius: 4px;
+                box-shadow: 0px 1px 0px 0px rgb(223, 225, 229);
+
+            }
+            #google-search {
+                width: 128px;
+            }
+            #feeling-lucky {
+                width: 144px;
             }
             #left-footer {
                 position: absolute;
@@ -123,14 +150,23 @@
             }
             #app-icon {
                 width: 40px;
-                display: block;
                 border-radius: 50%;
+                filter: brightness(105%);
             }
             #app-icon:hover {
                 filter: brightness(96%);
             }
             #leaf {
                 width: 12px;
+            }
+            #footer-background {
+                position: absolute;
+                width: 100%;
+                height: 47px;
+                left: 0px;
+                bottom: 0px;
+                z-index: -1;
+                background-color: rgb(242, 242, 242);
             }
         </style>
     </head>
@@ -155,8 +191,8 @@
                 <img id="microphone" alt="microphone" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/40px-Google_mic.svg.png">
             </div>
             <div id="search-buttons">
-                <button type="submit">Google Search</button>
-                <button type="submit">I'm Feeling Lucky</button>
+                <button id="google-search" class="search-button" type="submit">Google Search</button>
+                <button id="feeling-lucky" class="search-button" type="submit">I'm Feeling Lucky</button>
             </div>
         </form>
         <footer>
@@ -174,5 +210,6 @@
                 <a href="#">Settings</a>
             </div>
         </footer>
+        <div id="footer-background"></div>
     </body>
 </html>
