fixed cursor type over the buttons

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 height: 36px;
                 border: none;
                 border-radius: 4px;
+                cursor: pointer;
             }
             .search-button:hover {
                 border-style: solid;
@@ -85,7 +86,6 @@
                 border-width: 1px;
                 border-radius: 4px;
                 box-shadow: 0px 1px 0px 0px rgb(223, 225, 229);
-
             }
             #google-search {
                 width: 128px;
@@ -144,6 +144,7 @@
                 height: 36px;
                 border: none;
                 border-radius: 4px;
+                cursor: pointer;
             }
             #sign-in:hover{
                 background-color: rgb(42, 125, 233);
